# HSIP-1PHASE

./: .gitattributes  .gitignore  ACTIVE_CONSENT_REVOCATION.md  ATTACK_EVALUATION_REPORT.md  AUDIT_LOG_GUIDE.md  Cargo.toml  GETTING_STARTED.md  HSIP_CORE_VALUES_ASSESSMENT.md  INSTALL_WITH_AUDIT_LOGS.md  INTEGRATION_SDK.md  LICENSE  PHASE1_SECURITY_AUDIT.md  QUICKSTART.md  README.md  REAL_TESTS.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_HARDENING.md  SECURITY_TEST_FIXES.md  TESTING_GUIDE.md  TEST_PLAN.md  THREAT_MODEL.md  sync-fixes.bat
crates/hsip-auth/src/: lib.rs
crates/hsip-cli/: Cargo.toml
crates/hsip-cli/src/: main.rs
crates/hsip-cli/src/daemon/: mod.rs
crates/hsip-cli/tests/: consent_request_error_handling.rs
crates/hsip-core/: Cargo.toml
crates/hsip-core/src/: consent.rs  consent_policy.rs  constant_time.rs  error.rs  lib.rs  secure_memory.rs  session.rs  traffic_shaping.rs
crates/hsip-core/src/wire/: mod.rs
crates/hsip-gateway/src/: main.rs
crates/hsip-integration-sdk/: Cargo.toml  README.md
crates/hsip-integration-sdk/src/: lib.rs
crates/hsip-intercept/: Cargo.toml
crates/hsip-net/: Cargo.toml
crates/hsip-net/src/: connection_guard.rs  consent_cache.rs  guard.rs  input_validator.rs  lib.rs  rate_limiter.rs  tls_wrapper.rs  udp.rs
crates/hsip-regenerative/: Cargo.toml
crates/hsip-session/src/: lib.rs
crates/hsip-telemetry-guard/: Cargo.toml
crates/hsip-telemetry-guard/src/: audit.rs  audit_postgres.rs  flow_meta.rs  geolocation.rs  lib.rs  ntp_sync.rs  policy.rs
docs/: CONSENT_PROMPT_GUIDE.md  CONTRIBUTING.md
examples/integration-minimal/: Cargo.toml  README.md
examples/integration-minimal/src/: main.rs
installer/: BUILD_INSTRUCTIONS.md  INSTALLER_README.md  build-installer.bat  build-with-inno.ps1  hsip-installer.iss  launch-hidden.vbs
security_tests/: README.md
spec/: README.md
tests/security/: run_all_immediate_tests.sh
