[package]
name = "hsip-integration-sdk"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN ../../LICENSE"
description = "HSIP Integration SDK - stable extension points for third-party adapters"
repository = "https://github.com/nyxsystems/HSIP-1PHASE-1"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
