[package]
name = "hsip-telemetry-guard"
version = "0.1.0"
edition = "2021"
authors = ["HSIP Team"]
description = "Consent-driven telemetry blocking and policy engine for HSIP"
license-file = "../LICENSE"
repository = "https://github.com/nyxsystems/HSIP-1PHASE"
keywords = ["privacy", "telemetry", "consent", "firewall", "security"]
categories = ["network-programming", "cryptography"]

[dependencies]
# Core HSIP
hsip-common = { path = "../hsip-common" }

# Cryptography
blake3 = "1"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1", features = ["sync", "time", "net", "io-util", "rt"] }

# Error handling
thiserror = "2.0"

# Pattern matching
regex = "1"
glob = "0.3"

# Concurrency
parking_lot = "0.12"

# Network
url = "2"

# Storage (for quarantine and consent persistence)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# PostgreSQL for audit logs
tokio-postgres = { version = "0.7", optional = true, features = ["with-chrono-0_4"] }
postgres-native-tls = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }

# NTP time synchronization
rsntp = { version = "3", optional = true }

# Geolocation (updated to 0.27 to fix RUSTSEC-2025-0132)
maxminddb = { version = "0.27", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"

[features]
default = []
persistence = ["rusqlite"]
postgres = ["tokio-postgres", "postgres-native-tls", "native-tls"]
ntp-sync = ["rsntp"]
geolocation = ["maxminddb"]
full = ["persistence", "postgres", "ntp-sync", "geolocation"]
proxy = []
