[package]
name = "hsip-integration-minimal"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN ../../LICENSE"
description = "Minimal HSIP integration example - copy this to your private repo"
publish = false

# Exclude from workspace (examples are standalone)
[workspace]

[dependencies]
hsip-integration-sdk = { path = "../../crates/hsip-integration-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
